# email_migration

./: .gitignore  Cargo.toml  README.md  TEST_CSV.csv  test.sh
src/: main.rs
