[package]
name = "email_migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.13.1"
clap = { version = "4.0", features = ["derive"] }